# check_shapes

./: .gitignore  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  HOWTO_RELEASE.md  README.md  RELEASE.md  poetryenv  poetryenv_requirements.txt  pylintrc  pyproject.toml
.github/workflows/: benchmark.yml  build_test_deploy.yml
benchmark/: README.md  plot_benchmarks.py  run_benchmark.py  stats.py
benchmark/examples/: jax_example.py  np_example.py  tf_example.py  torch_example.py
benchmark_results/: results_jax_example_20221006_152406.623523.csv  results_jax_example_20221017_105851.350938.csv  results_jax_example_20221024_110119.296436.csv  results_jax_example_20221031_104537.764944.csv  results_jax_example_20221107_104740.287945.csv  results_jax_example_20221114_104728.159498.csv  results_jax_example_20221121_104533.459140.csv  results_jax_example_20221128_104402.523652.csv  results_jax_example_20221205_104431.495668.csv  results_jax_example_20221212_104120.081147.csv  results_jax_example_20221219_104056.756537.csv  results_jax_example_20221226_104105.933066.csv  results_jax_example_20230102_103716.450971.csv  results_jax_example_20230109_104133.280815.csv  results_jax_example_20230116_103921.485041.csv  results_jax_example_20230123_103834.559257.csv  results_jax_example_20230130_103928.783311.csv  results_jax_example_20230206_104050.827980.csv  results_jax_example_20230213_104354.430785.csv  results_jax_example_20230220_104341.378482.csv  results_jax_example_20230227_104422.355838.csv  results_jax_example_20230306_103946.333771.csv  results_jax_example_20230313_103959.365479.csv  results_jax_example_20230403_103704.924487.csv  results_jax_example_20230410_103533.514393.csv  results_jax_example_20230417_103628.593605.csv  results_jax_example_20230424_103914.937444.csv  results_jax_example_20230501_103632.498502.csv  results_jax_example_20230508_103621.637718.csv  results_jax_example_20230515_103527.750368.csv  results_jax_example_20230522_103546.272031.csv  results_jax_example_20230529_103751.154082.csv  results_jax_example_20230605_103555.842719.csv  results_jax_example_20230612_103649.347031.csv  results_jax_example_20230619_103835.927219.csv  results_jax_example_20230626_105153.045634.csv  results_jax_example_20230703_105416.307823.csv  results_jax_example_20230710_105421.299752.csv  results_jax_example_20230717_105654.981163.csv  results_jax_example_20230724_105053.223258.csv  (+573 more)
check_shapes/: __init__.py  accessors.py  argument_ref.py  base_types.py  bool_specs.py  checker.py  checker_context.py  config.py  decorator.py  error_contexts.py  inheritance.py  parser.py  shapes.py  type_flags.py
check_shapes/integration/: tf.py  tfp.py  torch.py
docs/: README.md  benchmarks.rst  conf.py  index.html  index.rst
docs/_static/: .keep
docs/develop/: .buildinfo  benchmarks.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/develop/.doctrees/: benchmarks.doctree  environment.pickle  index.doctree
docs/develop/_sources/: index.rst.txt
docs/jesper-12-docs/: search.html
docs/jesper-12-docs/.doctrees/: environment.pickle  index.doctree
docs/main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/main/.doctrees/: benchmarks.doctree  environment.pickle  index.doctree
poetryenvs/jax_max/: pyproject_overrides.toml
poetryenvs/jax_min/: pyproject_overrides.toml
poetryenvs/np_max/: pyproject_overrides.toml
poetryenvs/np_min/: pyproject_overrides.toml
poetryenvs/py_max/: pyproject_overrides.toml
poetryenvs/tf_max/: pyproject_overrides.toml
poetryenvs/tf_min/: pyproject_overrides.toml
poetryenvs/tfp_max/: pyproject_overrides.toml
poetryenvs/torch_max/: pyproject_overrides.toml
poetryenvs/torch_min/: pyproject_overrides.toml
shape_checking_study/check_doc_shapes/: pyproject.toml
shape_checking_study/check_doc_shapes/shape_checking_study/: numpy_example.py  numpy_example_2.py  sphinx_autodoc_tensors.py
shape_checking_study/check_doc_shapes/source/: conf.py  index.rst
shape_checking_study/deepmind_tensor_annotations/: pyproject.toml
shape_checking_study/deepmind_tensor_annotations/shape_checking_study/: jax_example.py  numpy_example.py  tensorflow_example.py
shape_checking_study/deepmind_tensor_annotations/tests/: test_shape_checking.py
shape_checking_study/manchester_check_shapes/: pylintrc
shape_checking_study/manchester_check_shapes/shape_checking_study/: check_shapes.py  jax_example.py  numpy_example.py  pytorch_example.py  tensorflow_example.py
shape_checking_study/manchester_check_shapes/tests/: test_shape_checking.py
shape_checking_study/no_checks/: pyproject.toml
shape_checking_study/no_checks/tests/: test_shape_checking.py
shape_checking_study/nptyping/: pyproject.toml
shape_checking_study/nptyping/shape_checking_study/: jax_example.py  numpy_example.py  pytorch_example.py
shape_checking_study/pio_shape_py/: mypy.ini  pyproject.toml
shape_checking_study/pio_shape_py/shape_checking_study/: jax_example.py  numpy_example.py  pytorch_example.py  tensorflow_example.py
shape_checking_study/pio_shape_py/tests/: test_shape_checking.py
shape_checking_study/pio_shaped_array/: pyproject.toml
shape_checking_study/pycontracts/: example.py  mypy.ini  pyproject.toml
shape_checking_study/pycontracts/shape_checking_study/: numpy_example.py
shape_checking_study/pycontracts/tests/: test_shape_checking.py
shape_checking_study/shape_guard/: pyproject.toml
shape_checking_study/tensorguard/: pyproject.toml
shape_checking_study/tf_assert_shapes/: pylintrc  pyproject.toml
shape_checking_study/torchtyping/: pyproject.toml
shape_checking_study/tsanley/: example.py  pyproject.toml
tests/: conftest.py  test_check_shapes.py
tests/check_shapes/: test_argument_ref.py  test_bool_specs.py  test_checker.py  test_checker_context.py  test_config.py  test_decorator.py  test_error_contexts.py  test_inheritance.py  test_integration.py  test_parser.py  test_shapes.py  test_specs.py  test_version.py  utils.py
tests/examples/: test_check_shapes_examples.py
(+150 files in other folders)
