[tool.poetry]
name = "check_shapes"
version = "0.1.0"
description = "A library for annotating and checking the shapes of tensors."
authors = ["Jesper Nielsen <jespernielsen1982+check_shapes@gmail.com>", "The GPflow Contributors"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
